# multi-sensor-fusion-for-localization

./: README.md
environment/: .gitignore  README.md  docker-compose.yaml
workspace/: .gitignore
workspace/assignments/00-hello-kitti/: .gitignore  README.md
workspace/assignments/00-hello-kitti/src/lidar_localization/launch/: test_frame.launch
workspace/assignments/04-imu-calib/: CMakeLists.txt
workspace/assignments/04-imu-calib/apps/: test.cpp
workspace/assignments/04-imu-calib/include/: base.hpp  base_impl.hpp
workspace/assignments/04-imu-calib/src/imu_tk/apps/: test_imu_calib.cpp  test_integration.cpp  test_phone_calib.cpp
workspace/assignments/04-imu-calib/src/imu_tk/include/imu_tk/: base.h  calibration.h  filters.h  integration.h  io_utils.h  visualization.h
workspace/assignments/04-imu-calib/src/imu_tk/src/: calibration.cpp  filters.cpp  io_utils.cpp  visualization.cpp
workspace/assignments/05-imu-navigation/src/gnss_ins_sim/: CMakeLists.txt  README.md
workspace/assignments/05-imu-navigation/src/gnss_ins_sim/config/: acceleration.yaml  rotation.yaml  stationary.yaml  uniform.yaml
workspace/assignments/05-imu-navigation/src/gnss_ins_sim/launch/: acceleration.launch  rotation.launch  stationary.launch  uniform.launch
workspace/assignments/05-imu-navigation/src/gnss_ins_sim/src/: recorder_node_allan_variance_analysis.py
workspace/assignments/05-imu-navigation/src/imu_integration/: CMakeLists.txt  README.md
workspace/assignments/06-filtering-basic/: .gitignore
workspace/data/: README.md
workspace/data/kitti/: README.md
(+28 files in other folders)
